[tool.poetry]
name = "aiocurrencylayer"
version = "1.0.2"
description = "Python client for interacting with the CurrencyLayer API"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/aiocurrencylayer"
include = ["CHANGES.rst", "LICENSE", "README.rst"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.19.0,<1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
pytest-httpx = "^0.13.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
