[tool.poetry]
name = "aiocurrencylayer"
version = "1.0.4"
description = "Python client for interacting with the CurrencyLayer API"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/aiocurrencylayer"
include = ["CHANGES.rst", "LICENSE", "README.rst"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.8"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
