[tool.poetry]
name = "aiocurrencylayer"
version = "1.0.6"
description = "Python client for interacting with the CurrencyLayer API"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/aiocurrencylayer"
include = ["CHANGES.rst", "LICENSE", "README.rst"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.26,<1"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
black = "^24.3"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
